objects/KCSArticle_kav__c.object
<CustomObject>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <label>ArticleNumber</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLatestVersion__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsLatestVersion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInApp__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsVisibleInApp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInCsp__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsVisibleInCsp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInPkb__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsVisibleInPkb</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInPrm__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsVisibleInPrm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <label>KnowledgeArticle ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>Owner ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishStatus__c</fullName>
        <label>PublishStatus</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>VersionNumber</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>KCSArticle_kav__c</label>
    <nameField>
        <label>KCSArticle_kav Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KCSArticle_kav__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>